--- a/index.html
+++ b/index.html
@@ -91,14 +91,11 @@
 		<footer class="bg-red-600 text-white text-center p-4">
 			<p>Teléfono: <a href="tel:+541112345678" class="underline">+054-011-4584-1263</a></p>
 			<div class="flex justify-center space-x-4 my-2">
-				<a href="https://www.facebook.com/cantinadechichilo" target="_blank" class="hover:underline">
+				<a href="https://www.facebook.com/chichilodebuenosaires" target="_blank" class="hover:underline">
 					Facebook
 				</a>
-				<a href="https://www.instagram.com/cantinadechichilo" target="_blank" class="hover:underline">
+				<a href="https://www.instagram.com/cantinachichilook" target="_blank" class="hover:underline">
 					Instagram
-				</a>
-				<a href="https://wa.me/541112345678" target="_blank" class="hover:underline">
-					WhatsApp
 				</a>
 			</div>
 			<p>&copy; 2025 Cantina de Chichilo. Todos los derechos reservados.</p>
