--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					class="w-full max-h-96 object-cover"
 				/>
 			</section>
-			<section id="especialidades" class="flex flex-col gap-4 my-10 text-center justify-center items-center">
+			<section id="especialidades" class="flex flex-col gap-4 my-10 text-center justify-center items-center p-2">
 				<h2 class="text-3xl font-bold text-red-700 text-center">
 					Nuestras especialidades
 				</h2>
@@ -80,23 +80,36 @@
 					</div>
 				</div>
 			</section>
-			<section id="ubicacion" class="my-10 text-center gap-4 flex flex-col justify-center items-center">
+			<section id="ubicacion" class="my-10 text-center gap-4 flex flex-col justify-center items-center p-2">
 				<h2 class="text-3xl font-bold text-red-700 text-center">
 					Donde nos encontramos
 				</h2>
 				<span>Nos encontramos en CAMARONES 1901 ESQ. TERRERO 2006</span>
-				<iframe title="Imagen con el mapa de la ubicación del restaurante" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13135.694301624555!2d-58.468079!3d-34.606094!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcde55529e7bdc599!2sCantina+Chichilo+de+Buenos+Aires!5e0!3m2!1ses!2sar!4v1562262195102!5m2!1ses!2sar" width="500" height="350" frameborder="0" style="border:0" allowfullscreen=""></iframe> 
+				<iframe class="w-2/4 h-64" title="Imagen con el mapa de la ubicación del restaurante" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13135.694301624555!2d-58.468079!3d-34.606094!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcde55529e7bdc599!2sCantina+Chichilo+de+Buenos+Aires!5e0!3m2!1ses!2sar!4v1562262195102!5m2!1ses!2sar" frameborder="0" style="border:0" allowfullscreen=""></iframe>
 			</section>
 		</main>
-		<footer class="bg-red-600 text-white text-center p-4">
-			<p>Teléfono: <a href="tel:+541112345678" class="underline">+054-011-4584-1263</a></p>
-			<div class="flex justify-center space-x-4 my-2">
-				<a href="https://www.facebook.com/chichilodebuenosaires" target="_blank" class="hover:underline">
-					Facebook
-				</a>
-				<a href="https://www.instagram.com/cantinachichilook" target="_blank" class="hover:underline">
-					Instagram
-				</a>
+		<footer class="flex flex-col gap-2 justify-center items-center bg-red-600 text-white text-center p-4">
+			<div class="flex gap-8">
+				<div class="flex flex-col items-center my-4 space-y-2">
+					<span class="text-lg font-semibold">Horario</span>
+					<div class="text-center">
+						<p><strong>Abierto:</strong> Jueves a sábados por la noche</p>
+						<p><strong>Almuerzos:</strong> Sábados y domingos</p>
+						<p><strong>Cena:</strong> 20:30 - 23:30 hrs</p>
+						<p><strong>Almuerzo:</strong> 12:30 - 14:30 hrs</p>
+					</div>
+				</div>
+				<div class="flex flex-col justify-center items-center my-4 space-y-2">
+					<p>Teléfono: <a href="tel:+541112345678" class="underline">+054-011-4584-1263</a></p>
+					<div class="flex justify-center space-x-4 my-2">
+						<a href="https://www.facebook.com/chichilodebuenosaires" target="_blank" class="hover:underline">
+							Facebook
+						</a>
+						<a href="https://www.instagram.com/cantinachichilook" target="_blank" class="hover:underline">
+							Instagram
+						</a>
+					</div>
+				</div>
 			</div>
 			<p>&copy; 2025 Cantina de Chichilo. Todos los derechos reservados.</p>
 		</footer>
