--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 			name="description"
 			content="Cantina en Buenos Aires desde hace más de 60 años"
 		/>
+		<meta name="keywords" content="cantina chichilo,restaurante en argentina,cantina en buenos aires,comida informal,TIRAMISU,CARACOLES,RANAS,CORDERO PATAGONICO,BROCOLIS,ARROZ CON LECHE,MEJILLONES,MONDONGO,RABAS,GAMBAS,LENTEJAS">
 		<link rel="stylesheet" href="style.css" />
 		<script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 	</head>
